Query representation defined it needs to be implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(jDBge)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(jDBge main.cpp components/Lexer.cpp components/Token.cpp components/Token.h components/Keywords.h)
+add_executable(jDBge main.cpp components/Lexer.cpp components/Token.cpp components/Token.h components/Keywords.h components/Query.h components/Filter.cpp components/Filter.h components/Table.h)
