--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(jDBge)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(jDBge main.cpp components/Lexer.cpp components/Token.cpp components/Token.h components/Keywords.h components/Query.h components/Filter.cpp components/Filter.h components/Table.h components/Parser.cpp components/Parser.h components/VM.cpp components/VM.h components/Console.h components/Logger.h)
+include_directories(include)
+
+set(HEADERS include/Token.h include/Keywords.h include/Query.h include/Filter.h include/Table.h include/Parser.h include/VM.h include/Console.h include/Logger.h)
+
+set(SOURCES src/main.cpp src/Lexer.cpp src/Token.cpp src/Filter.cpp src/Parser.cpp src/VM.cpp)
+
+add_executable(jDBge ${HEADERS} ${SOURCES})
