Fix to_map() utility method inverting column order on table creation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ include_directories(include)
 
 set(HEADERS include/Token.h include/Keywords.h include/Query.h include/Filter.h include/Table.h include/Parser.h include/VM.h include/Console.h include/Logger.h)
 
-set(SOURCES src/main.cpp src/Lexer.cpp src/Token.cpp src/Filter.cpp src/Parser.cpp src/VM.cpp)
+set(SOURCES src/Lexer.cpp src/Token.cpp src/Filter.cpp src/Parser.cpp src/VM.cpp)
 
-add_executable(jDBge ${HEADERS} ${SOURCES})
+add_library(libjDBge ${HEADERS} ${SOURCES})
+
+add_executable(jDBge src/main.cpp)
+
+target_link_libraries(jDBge libjDBge)
